# sentinel-rag

./: .env  .env.example  .gitignore  README.md  app.py  chatbot_responses.json  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
src/sentinel_rag/core/: engine.py
src/sentinel_rag/vector_db/: store.py
tests/: test_engine.py  test_vector_store.py
